--- a/style.css
+++ b/style.css
@@ -131,3 +131,23 @@ textarea {
     line-height: 10px;
     padding: 10px 20px;
 }
+
+footer {
+    font-family: 'IBM Plex Mono', monospace;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: 700;
+    margin-top: 20px;
+    color: var(--text-color);
+    padding-bottom: 24px;
+}
+  
+footer a {
+    font-weight: 700;
+    color: var(--text-color-alt);
+    letter-spacing: .5px;
+}
